# miniKV

./: .gitignore  Cargo.toml  check.sh  clippy.toml
.github/: copilot-instructions.md
src/: command.rs  error.rs  kv_store.rs  lib.rs  log.rs  main.rs  main.rs.bak  protocol.rs  store.rs
src/persistence/: log.rs  mod.rs  store.rs
src/server/: handler.rs  listener.rs  mod.rs  writer.rs
tests/: integracion.rs  server_client.rs
