[package]
name = "minikv"
version = "0.1.0"
edition = "2021"

[lib]
name = "minikv"
path = "src/lib.rs"

[[bin]]
name = "minikv-server"
path = "src/bin/server.rs"

[[bin]]
name = "minikv-client"
path = "src/bin/client.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
